# ar

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  GOVERNANCE.md  HPKE_DISCLOSURE_WALKTHROUGH.md  INTEGRATION_TEST_PROPOSAL.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  go.mod  go.work  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
audit/: AUDIT_REPORT.md  agent-ci-example.yml  test_first_run_e2e.py
collector/: .goreleaser.yaml  CHANGELOG.md  README.md  go.mod  go.sum  server.go  server_test.go  sqlite_store.go  sqlite_store_test.go  store.go  store_test.go
cross-sdk-tests/: README.md  canonicalization_vectors.json  emit_failure_vectors.json  go.mod  go.sum  go_vectors.json  malformed_vectors.json  py_vectors.json  spec_examples_test.go  spec_schema_test.go  v020_vectors.json  v030_vectors.json  v030_vectors_test.go  v040_vectors.json  v040_vectors_test.go  v050_vectors.json  v050_vectors_test.go
daemon/: .goreleaser.yaml  CHANGELOG.md  README.md  configfile.go  configfile_test.go  daemon.go  daemon_advance_test.go  daemon_test.go  generateforensickey_test.go  generatekey_test.go  go.mod  go.sum  install.sh  integration_test.go  nofollow_other.go  nofollow_unix.go  paths_darwin_test.go  paths_test.go  protocol.go  protocol_test.go  rotate.go  rotate_test.go  socketpolicy.go  socketpolicy_test.go  tests_chainresume_test.go  tests_concurrent_mcp_proxy_test.go  (+12 more)
plugins/hermes/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
plugins/hermes/src/agent_receipts_hermes/: __init__.py  _version.py  config.py  daemon_store.py  hooks.py  plugin.yaml  taxonomy.json
plugins/hermes/tests/: conftest.py  helpers.py  test_cli.py  test_config.py  test_integration.py  test_tools.py
sdk/py/: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
sdk/py/scripts/: generate_vectors.py  lint.sh  sync.sh  test.sh
sdk/py/src/agent_receipts/: __init__.py  _version.py  daemon_emitter.py  emitter.py  receipt_chain.py
sdk/py/src/agent_receipts/aws/: __init__.py  kms.py
sdk/py/src/agent_receipts/emitters/: __init__.py  buffering.py  composite.py  http.py  in_memory.py  types.py  wal.py
sdk/py/src/agent_receipts/receipt/: __init__.py  chain.py  create.py  disclosure.py  hash.py  key_provider.py  rotation.py  signing.py  types.py
sdk/py/src/agent_receipts/store/: store.py
sdk/py/src/agent_receipts/taxonomy/: config.py
sdk/py/src/obsigna/: __init__.py  _version.py  daemon_emitter.py  receipt_chain.py
sdk/py/src/obsigna/aws/: __init__.py  kms.py
sdk/py/src/obsigna/emitters/: __init__.py  buffering.py  composite.py  http.py  in_memory.py  types.py  wal.py
sdk/py/src/obsigna/receipt/: __init__.py  chain.py  create.py  disclosure.py  hash.py  key_provider.py  rotation.py  signing.py  types.py
sdk/py/src/obsigna/store/: __init__.py  store.py  verify.py
sdk/py/src/obsigna/taxonomy/: __init__.py  actions.py  classify.py  config.py  types.py
sdk/py/tests/: conftest.py  test_canonicalization_vectors.py  test_cross_language_go.py  test_cross_language_ts.py  test_emit_failure_vectors.py  test_receipt_chain.py  test_spec_schema.py  test_v030_vectors.py  test_v040_vectors.py  test_v050_vectors.py  test_version.py
sdk/py/tests/aws/: conftest.py  test_integration.py  test_kms.py
sdk/py/tests/contracts/: test_first_run.py
sdk/py/tests/daemon_emitter/: test_daemon_emitter.py  test_protocol_range.py
sdk/py/tests/emitter/: test_emitter.py
sdk/py/tests/emitters/: test_buffering.py  test_composite.py  test_http.py  test_in_memory.py  test_wal.py
sdk/py/tests/fixtures/: ts_vectors.json
sdk/py/tests/receipt/: test_chain.py  test_create.py  test_disclosure.py  test_hash.py  test_idempotency.py  test_key_provider.py  test_live_emit_version.py  test_rotation.py  test_signing.py  test_types.py
sdk/py/tests/store/: test_store.py  test_verify.py
sdk/py/tests/taxonomy/: test_actions.py  test_classify.py  test_config.py
(+671 files in other folders)
